--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -43,7 +43,7 @@ Each locale corresponds to a _locale identifier_, such as `en_US`, `fr_FR`, `ja_
 
 Locale identifiers can encode more explicit preferences about currency, calendar system, or number formats, such as in the case of `de_DE@collation=phonebook,currency=DDM`, which specifies German spoken in Germany, using [phonebook collation](http://developer.mimer.com/charts/german_phonebook.htm), and using the pre-Euro [Deutsche Mark](http://en.wikipedia.org/wiki/Deutsche_Mark).
 
-Users can change their locale settings in the "Langauge & Text" (or "International" on older versions of OS X) System Preferences on the Mac, or "General > International" in iOS Settings.
+Users can change their locale settings in the "Language & Text" (or "International" on older versions of OS X) System Preferences on the Mac, or "General > International" in iOS Settings.
 
 ![Language & Text System Preferences](http://nshipster.s3.amazonaws.com/nslocale-international-system-preferences.png)
 
