NSCache: improve Simple Chinese translation

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -29,9 +29,9 @@ rating: 7.5
 
 啊？这是什么意思？
 
-> 通常，精确的 `cost` 应该是对象占用的字节数。如果它不可以直接读出来的话，你不应该费劲地去计算它，因为这么做的话会增加使用缓存的代价。
+> 通常，精确的 `cost` 应该是对象占用的字节数。如果它不可以直接读出来的话，你没必要费劲地去计算它，因为这么做的话会增加使用缓存的代价。
 
-等会儿，什么是不是精确的 `cost` 值？有什么计算内存占用的规则吗？比如按数量排序来计算？“随便瞎猜导致性能变差”似乎不会让人满意……
+等会儿，那不精确的 `cost` 值应该怎么计算呢？有什么计算内存占用的规则吗？比如按数量排序来计算？“随便瞎猜导致性能变差”似乎不会让人满意……
 
 > 如果你没有有效的值传入，那就传入 0，或者用 setObject:forKey: 方法，它不需要传入 `cost` 值。
 
