cf bag translation completed

--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -6,25 +6,27 @@ ref: "https://developer.apple.com/library/mac/#documentation/CoreFOundation/Refe
 framework: CoreFoundation
 rating: 7.2
 published: true
-description: In the pantheon of collection data types in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. In fact, it's pretty obscure. You've probably never heard of it.
+description: 在计算机科学领域集合数据类型的殿堂中，bag没有数组、集合、联合数组、树、图、优先队列那么占有一席之地。其实bag本身就很晦涩，你可能从没听过这东西。
+translator: "Croath Liu"
+
 ---
 
-Objective-C is a language caught between two worlds.
+Objective-C是连接两个世界的语言。
 
-On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings it power and a dash of chaos.
+在其中一端的世界里，Objective-C遵循着经过深思熟虑的、发扬自[Smalltalk]的面向对象哲学理念，这种理念给我们带来了消息传输和参数命名法等好点子。另一端的世界里则避免不了有很多<a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>的残留思想带来强大的力量和一坨混乱。
 
-It's an identity crisis borne out through an ever-increasing prevalence of the `@` symbol.
+越来越多`@`符号的使用证明了这个一致性危机。
 
-This is also seen in the relationship between the Foundation and Core Foundation, particularly with the toll-free bridged collection class clusters: `NSArray` / `CFArray`, `NSDictionary` / `CFDictionary`, `NSSet` / `CFSet`. These collections can be passed back and forth between C functions and Objective-C methods without conversion. A leak in the abstraction, but a useful way to optimize the most critical parts of an application nonetheless.
+Foundation和Core Foundation的关系里也可以发现这种一致性问题，特别是那一堆无缝连接的类： `NSArray` / `CFArray`, `NSDictionary` / `CFDictionary`, `NSSet` / `CFSet`。这些类可以通过C函数和Objecrive-C方法传入传出而不需要手动转换。这是抽象化设计的缺陷，但是同时也是写应用时最实用的优化最难以优化部分的绝佳手段。
 
-However, toll-free bridging is the exception when it comes to collection classes in Foundation and Core Foundation:
+但是这种无缝连接是Foundation和Core Foundation之间集合类型转换的一个例外：
 
 <table>
   <thead>
     <tr>
       <th>Foundation</th>
       <th>Core Foundation</th>
-      <th>Toll-Free Bridged</th>
+      <th>无缝转换</th>
     </tr>
   </thead>
   <tbody>
@@ -86,28 +88,28 @@ However, toll-free bridging is the exception when it comes to collection classes
   </tbody>
   <tfoot>
     <tr>
-      <td colspan="3"><sup>*</sup> Indicates Mutable Counterpart</td>
+      <td colspan="3"><sup>*</sup> 代表同样适用于相应的mutable类型</td>
     </tr>
   </tfoot>
 </table>
 
-Take a look at the second row, with `NSCountedSet` and `CFBag`. Notice that unlike the other Foundation / Core Foundation correspondence, these two are not toll-free bridged. No real explanation for this is provided in the documentation, aside from it being acknowledged in the `NSCountedSet` documentation. My guess is that it has something to do with `NSCountedSet` not having a mutable counterpart, and thus breaking the class cluster pattern seen in `NSArray`, et al.
+看表格的第二行， `NSCountedSet` 和 `CFBag`。注意：不像Foundation和Core Foundation中的其他类型，他们之间不能无缝转换。在 `NSCountedSet` 的文档中没有表明存在这种转换方式。我猜是因为 `NSCountedSet` 没有对应的可变(mutable)类型，于是这就打破了类似 `NSArray` 那些支持无缝转换的固有模式。
 
-## Bags, in the Abstract
+## 概念上的Bag
 
-In the <a href="http://en.wikipedia.org/wiki/Collection_(abstract_data_type)">pantheon of collection data types</a> in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues.
+在<a href="http://en.wikipedia.org/wiki/Collection_(abstract_data_type)">集合数据类型的殿堂</a>中，bag没有数组、集合、联合数组、树、图、优先队列那么占有一席之地。
 
-In fact, it's pretty obscure. You've probably never heard of it.
+其实bag本身就很晦涩，你可能从没听过这东西。
 
-A bag, or [multiset](http://en.wikipedia.org/wiki/Multiset) is a variant of a set, where members can appear more than once. A count is associated with each unique member of the collection, representing the number of times it has been added. Like with sets, order does not matter.
+Bag，或者叫做[multiset](http://en.wikipedia.org/wiki/Multiset)，是set的一种变体，不同的是bag里统一数据可以出现不止一次。集合中每一个唯一元素会有一个合计数字与其绑定。类似set一样，bag也是顺序不敏感的。
 
-Its practical applications are... limited, but you'll know one when it comes up. Tallying votes in a general election? Simulating homework problems an intro probability class? Implementing a game of Yahtzee? Bag is your new bicycle!
+用bag的场景有...咳咳...很少，但有一个如果它出现你肯定能感觉到那就是bag。大选中统计票数？模拟家庭作业中的概率分布？实现一个Yahtzee骰子游戏？Bag都是你的新选择！
 
-## Working with `CFMutableBag`
+## 使用`CFMutableBag`
 
-As an implementation of the bag data type, `CFBag` and its mutable counterpart, `CFMutableBag`, are pretty slick.
+`CFBag` 和它的可变类型同类 `CFMutableBag` 作为bag类型的具体实现，都是非常灵活的。
 
-Although it lacks the object-oriented convenience of `NSCountedSet`, it makes up for it with a number of ways to customize its behavior. When `CFBag` is created, it can be initialized with a number of callbacks, defined by the `CFBagCallBacks` struct, which specify the way values are inserted, removed, and compared:
+虽然它们没有像 `NSCountedSet` 那样方便地面向对象化，但它可以进行的自定义行为却是多种多样的。你可以用带有许多回调的初始化函数来建立一个 `CFBag` ，这些回调函数定义在 `CFBagCallBacks` 结构中，该结构详细描述了一个值被插入、删除、比较的方法：
 
 ~~~{objective-c}
 struct CFBagCallBacks {
@@ -121,20 +123,20 @@ struct CFBagCallBacks {
 typedef struct CFBagCallBacks CFBagCallBacks;
 ~~~
 
-- `retain`: callback used to retain values as they're added to the collection
-- `release`: callback used to release values as they're removed from the collection
-- `copyDescription`: callback used to create a string description of each value in the collection
-- `equal`: callback used to compare values in the collection for equality
-- `hash`: callback used to compute hash codes for values in the collection
+- `retain`: 当一个值被添加到集合里时用于retain它的回调
+- `release`: 当一个值被从集合里删除时用于release它的回调
+- `copyDescription`: 用于集合中每个值建立一个string类型的description的回调
+- `equal`: 用于比较集合中两个值是否相等的回调
+- `hash`: 集合中用于计算值的Hash的回调
 
-For example, if you were implementing a vote tallying application, you could specify a normalizing function for `retain` to ensure that votes for mixed-case or misspelled names went to the right candidate, or ensure that the "correct" candidate is shown to be the winner when all the votes are in, with `equal` callback.
+例如，如果你正在做一个投票统计应用，你可以制定一个用于 `retain` 回调函数来保证不同大小写和错误拼写的名字能够归类到正确的候选人；也可以用 `equal` 回调函数来保证当所有选票都统计完时能够计算出票最多的候选人。
 
-`CFMutableBag` also has `CFBagApplyFunction`, which has the ability to transform values over the collection, like if you wanted to smooth out vote counts, or something like that.
+`CFMutableBag` 也有 `CFBagApplyFunction`，这个函数可以用来改变集合中的值，比如说理顺选举数量之类的。
 
-So in closing, if you need to rig an election, `CFBag` is your best bet.
+总而言之，如果你要准备搞一个选举， `CFBag` 是你的最佳选择。
 
 ---
 
-But seriously, `CFBag`, useful in its own right, serves as a reminder of the hidden gems to be found within the standard frameworks and libraries--indeed what is at the very heart of being an NSHipster.
+严肃地讲， `CFBag` 在它擅长的领域内确实好用，它时刻提醒着你这是标准框架和标准库中的一块隐藏的宝石，而发觉隐藏的宝藏，就是成为一个NSHipster的核心。
 
-Also, `CFBinaryHeap`? `NSPointerFunctions`? `NSMapTable`? Surely, you'll be seeing more of these in future editions.
+同样的，`CFBinaryHeap` 呢？ `NSPointerFunctions` 呢？ `NSMapTable` 呢？别急，以后我们都会谈到的。
