self review fix

--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -18,7 +18,7 @@ description: "产品的国际化就像牙线：所有人都知道他们应该使
 
 ## 国际化相对于本地化
 
-每当我们讨论国际化（i18n）或者本地化（l10n）的时候，我们有必要也必须弄清楚两者之间的区别：
+每当我们讨论国际化（i18n）或者本地化（l10n）的时候，我们有必要弄清楚两者之间的区别：
 
 - **本地化**是将你的应用适应某一个特定市场的操作。
 - **国际化**是准备将你的应用本地化的操作。 
@@ -54,8 +54,6 @@ description: "产品的国际化就像牙线：所有人都知道他们应该使
 
 如果你要从`NSLocale`里只学一样东西，那就是你需要把`[NSLocale currentLocale]`传进`NSDateFormatter`和`NSNumberFormatter`的实例，这样做能确保日期、数字和货币能根据用户设置的地点信息显示正确的格式。
 
-Actually, make that a meta lesson about locales: always use `NSDateFormatter` and `NSNumberFormatter` when displaying anything to do with dates or numbers, respectively.
-
 实际上，当你需要展示任何有关日期或者数字的时候，你最好永远用`NSDateFormatter`或者`NSNumberFormatter`，这须成为你的一个最基本的知识。
 
 不过还是让我们来看看`NSLocale`一些更棒的内容吧。
@@ -84,9 +82,9 @@ Actually, make that a meta lesson about locales: always use `NSDateFormatter` an
 - `NSLocaleAlternateQuotationBeginDelimiterKey`
 - `NSLocaleAlternateQuotationEndDelimiterKey`
 
-尽管这些东西看起来都有些难懂，但为了让自己的应用有更好的体验，你会惊讶于你使用这些常数的频率的。
+尽管这些东西看起来都有些难懂，但如果为了让自己的应用有更好的体验，你会惊讶于你使用这些常数的频率的。
 
-这些常量相关的全都是些小东西，就像你必须知道引号在不同地区其实有不同用法：
+与这些常量相关的配置全都是些小东西，例如你必须知道引号在不同地区其实有不同用法：
 
 > 英语: “I can eat glass, it doesn't harm me.”  
 > 德语: „Ich kann Glas essen, das tut mir nicht weh.“  
@@ -96,7 +94,7 @@ Actually, make that a meta lesson about locales: always use `NSDateFormatter` an
 
 ## `-displayNameForKey:value:`
 
-另一个需要注意的、尽管基本没什么用的方法是`-displayNameForKey:value:`，它返回一个地区标识符用来展示的名字。
+另一个需要注意的、却也基本没什么用的方法是`-displayNameForKey:value:`，它返回一个地区标识符用来展示的名字。
 
 ~~~{objective-c}
 NSLocale *frLocale = [[NSLocale alloc] initWithLocaleIdentifier:@"fr_FR"];
@@ -114,7 +112,7 @@ NSLog(@"en_US: %@", [frLocale displayNameForKey:NSLocaleIdentifier value:@"en_US
 ## `+preferredLanguages`
 
 
-最后一个值得一提的方法是`NSLocale +preferredLanguages`，它会根据用户的喜好返回一个[IETF BCP 47 language identifier](http://tools.ietf.org/html/bcp47)字符串数组。
+最后一个值得一提的方法是`NSLocale +preferredLanguages`，它会根据用户的偏好返回一个[IETF BCP 47 语言标识符](http://tools.ietf.org/html/bcp47)的字符串数组。
 
 与服务器交互的应用可以用这些值来定义HTTP头里面的`Accept-Language`字段，而后服务器就能选择相应的本地化资源：
 
@@ -127,8 +125,8 @@ NSMutableURLRequest *request = ...;
 
 ---
 
-国际化通常是一个在编程的时候不怎么性感的话题，也是可能大多数项目不必考虑的一些杂活。而实际上，为另一个地区来设计软件其实是一种珍贵的经历（而且并不是为了增加你在另一个市场的经济收入）。
+国际化通常是一个在编程的时候不怎么性感的话题，也是可能大多数项目都不必考虑的一些杂活。而实际上，为另一个地区来设计软件其实是一种珍贵的经历（而且并不是为了增加你在另一个市场的经济收入）。
 
-编程中有一个最大的乐趣和挑战就是设计出的系统能共经受得住变化，而唯一能让系统设计在某一层次的改变中幸存的方法就是定位并重构系统可能不能总承受住改变的假设。在这个说法下，国际化也代表着一个最大的挑战，让我们时时对我们的文化身份提出疑问，而通过这样，我们不仅能成为更好的程序员，我们更能成为一个更好的人了。
+编程中有一个最大的乐趣和挑战就是设计出的系统能共经受得住变化，而唯一能让系统设计在某一层次的改变中幸存的方法就是定位并重构系统可能不能总承受住改变的部分。在这个说法下，国际化也代表着一个巨大的挑战，让我们时时对我们的文化身份提出疑问，而通过这样，我们不仅能成为更好的程序员，我们更能成为一个更好的人。
 
 所以，做一个更好的人吧，让`NSLocale`成为你每天仪式的一部分。
