--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -12,18 +12,18 @@ description: "产品的国际化就像牙线：所有人都知道他们应该使
 
 产品的国际化就像牙线：所有人都知道他们应该使用，却可能都不去用。 
 
-就想其他的一些习惯一样，国际化也需要练习到你不敢想象你_不去做_，它才会成为你的第二本性，所有你需要的是只是让一个人教你怎么做。
+像其他习惯一样，通过不断实践才能使应用国际化这件事变成你开发过程中的天性，以至于习惯之后你都没有办法容许自己_不做_国际化。而你现在所需的只是一个人教你如何去做。
 
-就让NSHipster成为你的维吉尔牙齿健康专家帮你通过这一片异土，保证没有蛀牙哟！
+就让NSHipster成为帮你通过这一片异土的维吉尔牙齿健康专家，保证没有蛀牙哟！
 
 ## 国际化相对于本地化
 
 每当我们讨论国际化（i18n）或者本地化（l10n）的时候，我们有必要弄清楚两者之间的区别：
 
 - **本地化**是将你的应用适应某一个特定市场的操作。
-- **国际化**是准备将你的应用本地化的操作。 
+- **国际化**是将你的应用本地化的准备操作。
 
-> 国际化是必要的，但不是本地化的充分条件，它也是这篇文章主要讨论的东西。本地化，包括将一些文本和资源翻译成指定语言的操作，将会在NSHipster之后的内容中涉及到。
+> 国际化是本地化的必要不充分条件，它也是这篇文章主要讨论的东西。本地化，包括将一些文本和资源翻译成指定语言的操作，将会在NSHipster之后的内容中涉及到。
 
 让国际化变得困难的是，你需要摆脱你的文化环境去思考。像排序或者分类之类的工作，之前你觉得很微不足道而不想去管，但现在你必须得与这种情绪做斗争了，而且还得重视一些极小差别可能带来的痛苦或者困惑。
 
@@ -60,7 +60,7 @@ description: "产品的国际化就像牙线：所有人都知道他们应该使
 
 ## `-objectForKey:`
 
-`NSLocale`也有Foundation中对特定其领域的迂腐的特征，而没有比`-objectForKey:`这个方法更明显地体现这个迂腐了。这是这个方法里key的常量的列表：
+`NSLocale`也有Foundation中对领域专有的迂腐特征，而没有比`-objectForKey:`这个方法更明显地体现这个迂腐了。这是这个方法里key的常量的列表：
 
 - `NSLocaleIdentifier`
 - `NSLocaleLanguageCode`
