Fix a very minor typo

--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -129,7 +129,7 @@ NSURL *baseURL = [NSURL URLWithString:@"http://example.com/v1/"];
 – `standardizedURL`
 – `user`
 
-The documentation and examples found in [`NSURL`'s documentation](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSURL_Class/Reference/Reference.html) are a great way to familiarize yourself with al of the different components.
+The documentation and examples found in [`NSURL`'s documentation](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSURL_Class/Reference/Reference.html) are a great way to familiarize yourself with all of the different components.
 
 > Although username & password _can_ be stored in a URL, consider using `NSURLCredential` when representing user credentials, or persisting them to the keychain.
 
