NSURL translation complete.

--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -3,19 +3,19 @@ layout: post
 title: "NSURL /<br/>NSURLComponents"
 framework: "Foundation"
 rating: 8.9
-description: "Of all the one-dimensional data types out there, URIs reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer."
+description: "在所有的一维数据类型中，URI有着至高地位。单独就人类可阅读的字符串这一点来说，它存在并将永远存在于计算机中任何你能够想象到的对位置信息进行编码的数据中。"
 translator: "Croath Liu"
 ---
 
-There is a simple beauty to—let's call them "one-dimensional data types": numbers or strings formatted to contain multiple values, retrievable through a mathematical operator or parsing routine. Like how the hexadecimal color <tt style="color: #EE8262;">#EE8262</tt> can have [red, green, and blue components](http://en.wikipedia.org/wiki/Web_colors) extracted by masking and shifting its bits, or how [regular expressions](http://en.wikipedia.org/wiki/Regular_expression) can match and capture complex patterns in just a few characters.
+这里有一个直观的描述来解释什么是“一维数据类型”：number或string被格式化为多种多样的值，可以通过数学运算或某种转换方法可以算出它们的值。比如：十六进制的颜色值 <tt style="color: #EE8262;">#EE8262</tt> 的[红绿蓝三原色](http://en.wikipedia.org/wiki/Web_colors)的值通过掩码或移位运算得出；[正则表达式](http://en.wikipedia.org/wiki/Regular_expression)可以通过少量字符中复杂的样本中进行匹配。
 
-Of all the one-dimensional data types out there, [URIs](http://en.wikipedia.org/wiki/URI_scheme) reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer.
+在所有的一维数据类型中，[URI](http://en.wikipedia.org/wiki/URI_scheme)有着至高地位。单独就人类可阅读的字符串这一点来说，它存在并将永远存在于计算机中任何你能够想象到的对位置信息进行编码的数据中。
 
-In its most basic form, a URI is comprised of a scheme name and a hierarchical part, with an optional query and fragment:
+它最基础的表示法中，URI由一个scheme和一个hierarchical part组成，带有query和fragment（后两者非必需）：
 
         <scheme name> : <hierarchical part> [ ? <query> ] [ # <fragment> ]
 
-Many protocols, including HTTP, specify a regular structure for information like the username, password, port, and path in the hierarchical part:
+很多像HTTP的协议中会定义有一定的规范结构，例如：username、password、port, 以及hierarchical part中的path：
 
 <table style="font-family:Menlo,monospace;">
     <thead>
@@ -59,29 +59,29 @@ Many protocols, including HTTP, specify a regular structure for information like
     </tbody>
 </table>
 
-A solid grasp of network programming is rooted in an unshakeable familiarity with URL components. As a software developer, this means having a command over the URI functionality in your programming language's standard library.
+对网络编程的扎实理解植根于对于URL各个部分的完全的熟悉。作为软件开发工程师，这意味着在你的编程语言标准库中存在着对URI进行指挥功能的命令。
 
-> If a programming language does not have a URI module in its standard library, run, don't walk, to a real language that does.
+> 如果某门语言在标准库中没有URL模块，你要跑着离开这门语言（不能用走的！一定要跑！），这不是一门真正的编程语言。
 
 * * *
 
-In Foundation, URLs are represented by `NSURL`.
+在Foundation库中，`NSURL`用来代表URL。
 
-`NSURL` instances are created using the class method `URLWithString:`
+`NSURL` 可以通过 `URLWithString:` 类方法实例化。
 
 ~~~{objective-c}
 NSURL *url = [NSURL URLWithString:@"http://example.com"];
 ~~~
 
-If the passed string is not a valid URL, this method will return `nil`.
+如果传入值不是合法URL，这个方法会返回一个 `nil` 值。
 
-`NSString` also has some vestigial functionality for path manipulation, [as described a few weeks back](http://nshipster.com/nstemporarydirectory/), but that's being slowly migrated over to `NSURL`. While the extra conversion from `NSString` to `NSURL` is not the most convenient step, it's always worthwhile. If a value is a URL, it should be stored and passed as an `NSURL`; conflating the two types is reckless and lazy API design.
+[我们几周前提到过](http://nshipster.cn/nstemporarydirectory/) `NSString` 也有一些关于path处理的残留功能，但这些功能对于处理 `NSURL` 实在是太麻烦了。把 `NSString` 转化为 `NSURL` 带来的额外转化成本让这件事并不那么方便，你总是要花时间在这个上面。如果一个值就是一个URL，那么它就应该被保存为 `NSURL`，把这两种类型搞混是懒惰而鲁莽的API设计。
 
->> As a side note, `@@` would be a nice literal for `NSURL`, (e.g. `@@"http://example.com"`), don't you think?
+>>附加提示：`@@` 是创建 `NSURL` 的字面量的绝佳方法（例如：`@@"http://example.com"`），怎么样，很方便吧？
 
-`NSURL` also has the class method `+URLWithString:relativeToURL:`, which can be used to construct a URL from a string relative to a base URL. The behavior of this method can be a source of confusion, because of how it treats leading `/`'s in relative paths.
+`NSURL` 也有一个类方法 `+URLWithString:relativeToURL:` 可以根据一个base URL地址和关联字符串来构造URL。这个方法的行为由于其对子目录的`/`符号的处理而变得非常混乱无序。
 
-For reference, here are representative examples of how this method works:
+这里有一些这个方法用法的典型参考：
 
 ~~~{objective-c}
 NSURL *baseURL = [NSURL URLWithString:@"http://example.com/v1/"];
@@ -107,7 +107,7 @@ NSURL *baseURL = [NSURL URLWithString:@"http://example.com/v1/"];
 
 ## URL Components
 
-`NSURL` provides accessor methods for each of the URL components as defined by [RFC 2396](http://www.ietf.org/rfc/rfc2396.txt):
+`NSURL` 根据[RFC 2396](http://www.ietf.org/rfc/rfc2396.txt)的定义提供accessor方法用于获取URL每一部分的值：
 
 – `absoluteString`
 – `absoluteURL`
@@ -130,17 +130,17 @@ NSURL *baseURL = [NSURL URLWithString:@"http://example.com/v1/"];
 – `standardizedURL`
 – `user`
 
-The documentation and examples found in [`NSURL`'s documentation](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSURL_Class/Reference/Reference.html) are a great way to familiarize yourself with all of the different components.
+[`NSURL`官方文档](https://developer.apple.com/library/mac/documentation/Cocoa/Reference/Foundation/Classes/NSURL_Class/Reference/Reference.html)中的文档和样例是让你熟悉各种URL组成部分的绝佳参考。
 
-> Although username & password _can_ be stored in a URL, consider using `NSURLCredential` when representing user credentials, or persisting them to the keychain.
+> 虽然_可以_通过URL来存储用户名和密码，但建议用 `NSURLCredential` 装载用户名和密码，用keychain来存储它们更适合。
 
 ## NSURLComponents
 
-Quietly added in iOS 7 and Mac OS X 10.9 Mavericks was `NSURLComponents`, which can best be described by what it could have been named instead: `NSMutableURL`. Still lacking documentation, this class remains one of the more obscure recent additions to Foundation.
+苹果在 iOS 7 和 Mac OS X 10.9 Mavericks 中悄悄添加了 `NSURLComponents`，这样就可以完美替代 `NSMutableURL` 了。但文档还不是很完善，所以这个类仍然是近期Foundation新增类中隐晦的一块。
 
-`NSURLComponents` instances are constructed much in the same way as `NSURL`, with a provided `NSString` and optional base URL to resolve against (`+componentsWithString:` & `+componentsWithString:resolvingAgainstBaseURL:`). It can also be `alloc init`'d without any arguments to create an empty storage container, similar to [`NSDateComponents`](http://nshipster.com/nsdatecomponents/).
+创建 `NSURLComponents` 实例和创建 `NSURL` 实例的方法差不多，通过一个 `NSString` 和一个非必需的base URL参数创建(`+componentsWithString:` & `+componentsWithString:resolvingAgainstBaseURL:`)。也可以用 `alloc init` 创建一个空的容器，和[`NSDateComponents`](http://nshipster.com/nsdatecomponents/)差不多。
 
-The difference here, between `NSURL` and `NSURLComponents`, is that component properties are `readwrite`. This provides a safe and direct way to modify individual components of a URL:
+`NSURL` 和 `NSURLComponents` 的不同之处在于，URL component属性是 `readwrite` 的。它提供了安全直接的方法来修改URL的各个部分：
 
 - `scheme`
 - `user`
@@ -151,9 +151,9 @@ The difference here, between `NSURL` and `NSURLComponents`, is that component pr
 - `query`
 - `fragment`
 
-> Attempting to set an invalid scheme string or negative port number will throw an exception.
+> 如果尝试赋值一个非法的scheme或port，会抛出一个异常。
 
-In addition, `NSURLComponents` also has `readwrite` properties for [percent-encoded](http://en.wikipedia.org/wiki/Percent-encoding) versions of each component.
+另外，`NSURLComponents` 也有 `readwrite` 属性对每个component进行[percent-encoded]。
 
 - `percentEncodedUser`
 - `percentEncodedPassword`
@@ -162,15 +162,15 @@ In addition, `NSURLComponents` also has `readwrite` properties for [percent-enco
 - `percentEncodedQuery`
 - `percentEncodedFragment`
 
-> Getting these properties retains any percent encoding these components may have. Setting these properties assumes the component string is already correctly percent encoded. Attempting to set an incorrectly percent encoded string will cause an exception. Although ';' is a legal path character, it is recommended that it be percent-encoded for best compatibility with NSURL (`-stringByAddingPercentEncodingWithAllowedCharacters:` will percent-encode any ';' characters if you pass the `URLPathAllowedCharacterSet`).
+对这些percent encoding属性的get操作可能会造成retain增加。set操作会默认认为该component已经正确encode了。试图赋值一个非法的percent encode值会抛出异常。虽然 ';' 是一个合法的路径字符，但建议还是percent-encoded一下来兼容NSURL（传递给`-stringByAddingPercentEncodingWithAllowedCharacters:` `URLPathAllowedCharacterSet`参数 会将所有的 ';' 字符percent-encode）。
 
 ## Percent-Encoding
 
-Speaking of percent-encoding...
+说起percent-encoding...
 
-`NSURL` is [toll-free bridged](https://developer.apple.com/library/ios/documentation/CoreFoundation/Conceptual/CFDesignConcepts/Articles/tollFreeBridgedTypes.html) to `CFURLRef`. This lower-level C API effectively mirrors the functionality of `NSURL`, with the exception of `CFURLCreateStringByAddingPercentEscapes` and `CFURLCreateStringByReplacingPercentEscapesUsingEncoding`:
+`NSURL` 对 `CFURLRef` 的转换是[无缝的](https://developer.apple.com/library/ios/documentation/CoreFoundation/Conceptual/CFDesignConcepts/Articles/tollFreeBridgedTypes.html)。底层的C API有 `NSURL` 的所有功能。包括 `CFURLCreateStringByAddingPercentEscapes` 和 `CFURLCreateStringByReplacingPercentEscapesUsingEncoding` 异常：
 
-- `CFURLCreateStringByAddingPercentEscapes`: Creates a copy of a string, replacing certain characters with the equivalent percent escape sequence based on the specified encoding.
+- `CFURLCreateStringByAddingPercentEscapes`：创建一个字符串的copy，用同义的percent-encoded字符代替原有的字符。
 
 ~~~{objective-c}
 CFStringRef CFURLCreateStringByAddingPercentEscapes (
@@ -182,7 +182,7 @@ CFStringRef CFURLCreateStringByAddingPercentEscapes (
 );
 ~~~
 
-- `CFURLCreateStringByReplacingPercentEscapesUsingEncoding`: Creates a new string by replacing any percent escape sequences with their character equivalent.
+- `CFURLCreateStringByReplacingPercentEscapesUsingEncoding`： 创建一个新字符串，用同义的percent-encoded字符代替原有的所有可替换字符。
 
 ~~~{objective-c}
 CFStringRef CFURLCreateStringByReplacingPercentEscapesUsingEncoding (
@@ -193,21 +193,21 @@ CFStringRef CFURLCreateStringByReplacingPercentEscapesUsingEncoding (
 );
 ~~~
 
-## Bookmark URLs
+## Bookmark URL
 
-One final topic worth mentioning are bookmark URLs, which can be used to safely reference files between application launches. Think of them as a persistent [file descriptor](http://en.wikipedia.org/wiki/File_descriptor).
+最后一个话题是关于 bookmark URL 的，bookmard URL可以在应用多次启动间安全地引用文件。可以认为是一种对[文件描述符](http://en.wikipedia.org/wiki/File_descriptor)的持久化。
 
-> A bookmark is an opaque data structure, enclosed in an `NSData` object, that describes the location of a file. Whereas path- and file reference URLs are potentially fragile between launches of your app, a bookmark can usually be used to re-create a URL to a file even in cases where the file was moved or renamed.
+> 一个bookmark是一个唯一的数据类型，包含一个描述文件位置的 `NSData` 对象。鉴于path和文件引用URL在多次启动间可能被破坏，bookmark就可以被用来重建某个文件的URL地址，即使文件被改名或移动了位置也可以。
 
-You can read more about bookmark URLs in ["Locating Files Using Bookmarks" from Apple's File System Programming Guide](https://developer.apple.com/library/ios/documentation/FileManagement/Conceptual/FileSystemProgrammingGuide/AccessingFilesandDirectories/AccessingFilesandDirectories.html)
+你可以在[苹果官方的文件系统编程指南的"Locating Files Using Bookmarks"](https://developer.apple.com/library/ios/documentation/FileManagement/Conceptual/FileSystemProgrammingGuide/AccessingFilesandDirectories/AccessingFilesandDirectories.html)部分中阅读更多关于bookmark URL的内容。
 
 
 * * *
 
-Forget jet packs and flying cars—my idea of an exciting future is one where everything has a URL, is encoded in Markdown, and stored in Git. If your mind isn't blown by the implications of a _universal_ resource locator, then I would invite you to reconsider.
+忘记喷射火箭背包，忘记会飞的汽车吧，看看我对未来的设想：所有的东西都有一个URL，以Markdown编码，用Git存储！如果你对_宇宙_资源定位器有兴趣的话，你会同意我的想法的！
 
-Like [hypertext](http://en.wikipedia.org/wiki/Hypertext), universal identification is a philosophical concept that both pre-dates and transcends computers. Together, they form the fabric of our information age: a framework for encoding our collective understanding of the universe as a network of individual facts, in a fashion that is hauntingly similar to how the neurons in our brains do much the same.
+像[超文本](http://en.wikipedia.org/wiki/Hypertext)一样，通用标识就是一个哲学概念，通用标识理念早于计算机时代被提出，也将长存于人类信息体系中。这些通用标示合在一起变可以代表我们信息时代的架构：一个用来把我们对于宇宙每一点了解都encode为一个网络中实体的框架，这很酷，很像我们的大脑中存在很多神经元一样。
 
-We are just now crossing the precipice of a [Cambrian Explosion](http://en.wikipedia.org/wiki/Cambrian_explosion) in physical computing. In an internet of things, where [every object of our lives has a URL](http://en.wikipedia.org/wiki/IPv6#Larger_address_space) and embeds an electronic soul, a digital consciousness will emerge. Not to say, necessarily, that [the singularity is near](http://en.wikipedia.org/wiki/The_Singularity_Is_Near), but we're on the verge of something incredible.
+我们处在物理计算的[寒武纪大爆发](http://en.wikipedia.org/wiki/Cambrian_explosion)险境边缘。用不了多久就会出现这样的情景：在Internet组成的世界中，[我们生活中的每一部分都有一个URL](http://en.wikipedia.org/wiki/IPv6#Larger_address_space)，也都有一个电子化的大脑，都有数字化的精神和意识。虽然不能说是[奇点迫近](http://en.wikipedia.org/wiki/The_Singularity_Is_Near)，但是，我们，就正在某些未知但难以置信的奇妙事物边缘，马上就要感受到它的来临。
 
-Quite lofty implications for a technology used most often to exchange pictures of cats.
+世界总是这样的：互相交换猫咪照片的技术，总是蕴含着无比高深的哲学含义。
