--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -206,7 +206,7 @@ CFStringRef CFURLCreateStringByReplacingPercentEscapesUsingEncoding (
 
 忘记喷射火箭背包，忘记会飞的汽车吧，看看我对未来的设想：所有的东西都有一个URL，以Markdown编码，用Git存储！如果你对_宇宙_资源定位器有兴趣的话，你会同意我的想法的！
 
-像[超文本](http://en.wikipedia.org/wiki/Hypertext)一样，通用标识就是一个哲学概念，通用标识理念早于计算机时代被提出，也将长存于人类信息体系中。这些通用标示合在一起变可以代表我们信息时代的架构：一个用来把我们对于宇宙每一点了解都encode为一个网络中实体的框架，这很酷，很像我们的大脑中存在很多神经元一样。
+像[超文本](http://en.wikipedia.org/wiki/Hypertext)一样，通用标识就是一个哲学概念，通用标识理念早于计算机时代被提出，也将长存于人类信息体系中。这些通用标示合在一起便可以代表我们信息时代的架构：一个用来把我们对于宇宙每一点了解都encode为一个网络中实体的框架，这很酷，很像我们的大脑中存在很多神经元一样。
 
 我们处在物理计算的[寒武纪大爆发](http://en.wikipedia.org/wiki/Cambrian_explosion)险境边缘。用不了多久就会出现这样的情景：在Internet组成的世界中，[我们生活中的每一部分都有一个URL](http://en.wikipedia.org/wiki/IPv6#Larger_address_space)，也都有一个电子化的大脑，都有数字化的精神和意识。虽然不能说是[奇点迫近](http://en.wikipedia.org/wiki/The_Singularity_Is_Near)，但是，我们，就正在某些未知但难以置信的奇妙事物边缘，马上就要感受到它的来临。
 
